Control flow reference C# to C++ progress

--- a/src/content/docs/book/part-1-instructions/3-control-flow/3-guided-tour/2-0-change-calculator.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/3-guided-tour/2-0-change-calculator.mdx
@@ -96,7 +96,7 @@ To get started, let's add the code to read in the cost of the item, and the amou
         cost_of_item = to_integer(line);
     ```
 
-    This reads in text from the user and stores it in `line`. We want this as a number, so we use `convert`'s `to_integer` method and pass it the data in `line`.  If the data is not a number, `to_integer` raises an error that causes the program to crash.
+    This reads in text from the user and stores it in `line`. We want this as a number, so we use SplashKit's `to_integer` method and pass it the data in `line`.  If the data is not a number, `to_integer` raises an error that causes the program to crash.
 
     In the menu program we added a loop to ensure that the user's data is a number. We can use that same logic here. The logic for this looks like this:
 
