--- a/src/content/docs/book/part-1-instructions/3-control-flow/3-guided-tour/2-03-change-looping.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/3-guided-tour/2-03-change-looping.mdx
@@ -116,7 +116,7 @@ To conclude the change calculator we need to make this so that the user has the 
                   change_value = change_value - to_give * coin_value;
 
                   // Output the number of coins with the coin text
-                  write("" + to_string(to_give) + " x " + coin_text);
+                  write(to_string(to_give) + " x " + coin_text);
               }
 
               write_line();
@@ -244,7 +244,7 @@ To conclude the change calculator we need to make this so that the user has the 
                   change_value = change_value - to_give * coin_value;
 
                   // Output the number of coins with the coin text
-                  write("" + to_string(to_give) + " x " + coin_text);
+                  write(to_string(to_give) + " x " + coin_text);
               }
 
               write_line();
