--- a/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/08-hand-execution.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/08-hand-execution.mdx
@@ -28,7 +28,7 @@ Use the following steps to get started
 3. Perform the actions from the current line of code:
     - When you encounter a variable declaration, you need to create space for the variable in memory (on your piece of paper). Create a box somewhere on your page to keep track of that variable's value. When the instruction use that variable later you will be able to use the value from that box.
     - With each assignment statement, you need to perform the steps associated: calculate the value of the expression, and store the result in the variable. For the store step, cross out the old value in the variable's box and write in the new value.
-    - With a method call, you will need to know what the procedure does. For example, if the code calls `WriteLine` you can indicate what is shown in the Terminal without having to step through the instructions in `WriteLine`.
+    - With a method call, you will need to know what the procedure does. For example, if the code calls `write_line` you can indicate what is shown in the Terminal without having to step through the instructions in `write_line`.
     - With control flow statements, you will need to evaluate their condition and jump to the next instruction. Remember to focus on each instruction one at a time. You only evaluate the condition of the loops when that is the current part being executed.
 
 :::tip
