--- a/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/01-0-boolean-data.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/01-0-boolean-data.mdx
@@ -29,23 +29,23 @@ The SplashKit library includes some useful examples of methods that return boole
 
 | <div style="width:120px">**Method**</div> | **Required Arguments** |**Description** |
 |-----------|------------------------|----------------|
-|`QuitRequested`| None | Has the user asked to quit the program? |
-|`AnyKeyPressed`| None | Did the user press any key? |
-|`KeyUp`| A key code | Is the indicated key *up*? |
-|`KeyDown`| A key code | Is the indicated key held *down*? |
-|`KeyReleased`| A key code | Was the key down and then released? |
-|`KeyTyped`| A key code | Was the key up and then typed (pressed down and released)? |
-|`MouseClicked`| A mouse button | Was the indicated mouse button clicked? |
-|`MouseDown`| A mouse button | Is the indicated mouse button held down? |
-|`MouseUp`| A mouse button | Is the indicated mouse button up? (not held down) |
+|`quit_requested`| None | Has the user asked to quit the program? |
+|`any_key_pressed`| None | Did the user press any key? |
+|`key_up`| A key code | Is the indicated key *up*? |
+|`key_down`| A key code | Is the indicated key held *down*? |
+|`key_released`| A key code | Was the key down and then released? |
+|`key_typed`| A key code | Was the key up and then typed (pressed down and released)? |
+|`mouse_clicked`| A mouse button | Was the indicated mouse button clicked? |
+|`mouse_down`| A mouse button | Is the indicated mouse button held down? |
+|`mouse_up`| A mouse button | Is the indicated mouse button up? (not held down) |
 
 SplashKit also provides some utility methods that you can use when working with text.
 
 | <div style="width:120px">**Method**</div> | **Required Arguments** |**Description** |
 |-----------|------------------------|----------------|
-|`IsDouble`| a string | Returns true when the string argument can be converted to a double (it contains only a number). |
-|`IsInteger`| a string | Returns true when the string argument can be converted to an integer (it contains only a whole number). |
-|`IsNumber`| a string | An equivalent to `IsDouble`. Returns true when the string argument can be converted to a number (it contains only a number). |
+|`is_double`| a string | Returns true when the string argument can be converted to a double (it contains only a number). |
+|`is_integer`| a string | Returns true when the string argument can be converted to an integer (it contains only a whole number). |
+|`is_number`| a string | An equivalent to `is_double`. Returns true when the string argument can be converted to a number (it contains only a number). |
 
 :::note[Summary]
 
