--- a/src/content/docs/book/part-1-instructions/3-control-flow/MOVE-0-panorama/09-multimedia-methods.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/MOVE-0-panorama/09-multimedia-methods.mdx
@@ -34,35 +34,34 @@ The methods we will need in this chapter include:
 
 These methods have the following declarations:
 
-```cs
-// These needs...
-// using static SplashKitSDK.SplashKit;
+```c++
+// These need...
+// #include "splashkit.h"
 
 // Event loop
-public static void ProcessEvents();
-public static bool QuitRequested();
+void process_events();
+bool quit_requested();
 
 // Key input
 // This also requires... to get access to the KeyCode details.
-// using SplashKitSDK;
-public static bool KeyDown(KeyCode key);
+// bool KeyDown(KeyCode key);
 
 // Random numbers
-public static float Rnd(); // 0 to 1
-public static int Rnd(int ubound); // 0 to ubound - 1
-public static int Rnd(int min, int max); // min to max
+float rnd(); // 0 to 1
+int rnd(int ubound); // 0 to ubound - 1
+int rnd(int min, int max); // min to max
 
 
 // Time tracking
-public static Timer CreateTimer(string name);
-public static void StartTimer(string name);
-public static uint TimerTicks(string name);
+timer create_timer(string name);
+void start_timer(string name);
+uint timer_ticks(string name);
 
 // Collision detection
-public static bool CirclesIntersect(double c1X, double c1Y, double c1Radius, double c2X, double c2Y, double c2Radius);
-public static bool TriangleRectangleIntersect(Triangle tri, Rectangle rect);
-public static Rectangle RectangleFrom(double x, double y, double width, double height);
-public static Triangle TriangleFrom(double x1, double y1, double x2, double y2, double x3, double y3);
+bool circles_intersect(double c1_x, double c1_y, double c1_radius, double c2_x, double c2_y, double c2_radius);
+bool triangle_rectangle_intersect(triangle tri, rectangle rect);
+rectangle rectangle_from(double x, double y, double width, double height);
+triangle triangle_from(double x1, double y1, double x2, double y2, double x3, double y3);
 ```
 
 ### Key Codes
@@ -101,28 +100,28 @@ SplashKit also includes a number of methods for working with the mouse. These in
 
 ```cs
 // These methods need
-// using static SplashKitSDK.SplashKit;
+// #include "splashkit.h"
 
 // Was a given button on the mouse clicked?
-public static bool MouseClicked(MouseButton button);
+bool mouse_clicked(BUTTON);
 // Is a given button in the mouse current held down?
-public static bool MouseDown(MouseButton button);
+bool mouse_down(BUTTON);
 
 // Where is the mouse - relative to the left side of the window?
-public static float MouseX();
+float mouse_x();
 // Where is the mouse - relative to the top of the window?
-public static float MouseY();
+float mouse_y();
 ```
 
 For these you will need to use the `MouseButton` data. As with the `KeyCode` data, make sure you have `using SplashKitSDK;` so that you can see the `MouseButton` type.
 
 There are the following mouse button values:
 
-- `LeftButton` for the left mouse button
-- `MiddleButton` for the middle mouse button
-- `RightButton` for the right mouse button
-- `MouseX1Button` for the x1 mouse button
-- `MouseX2Button` for the x2 mouse button
+- `left_button` for the left mouse button
+- `middle_button` for the middle mouse button
+- `right_button` for the right mouse button
+- `mouse_x1_button` for the x1 mouse button
+- `mouse_x2_button` for the x2 mouse button
 
 As with the `KeyCode` data, you access this using `MouseButton.` and the button name, `MouseButton.LeftButton` for example. See the example code below to see how this may work.
 
@@ -130,114 +129,118 @@ As with the `KeyCode` data, you access this using `MouseButton.` and the button 
 
 Here is some example multimedia code that creates a program where the user is able to move a shape around on the screen.
 
-```cs
-using static SplashKitSDK.SplashKit;
-using SplashKitSDK;
+```c++
+#include "splashkit.h"
 
 const int MOVE_SPEED = 3;
 
-OpenWindow("Movement", 800, 600);
-
-// Event loop
-double x = 400;
-Color clr = ColorBlack();
-
-while( !QuitRequested() )
+int main()
 {
-  ProcessEvents();
+    open_window("Movement", 800, 600);
 
-  if (KeyDown(KeyCode.RightKey))
-  {
-    x += MOVE_SPEED;
-  }
+    // Event loop
+    double x = 400;
+    color clr = COLOR_BLACK;
 
-  if (KeyDown(KeyCode.LeftKey))
-  {
-    x -= MOVE_SPEED;
-  }
+    while( !quit_requested() )
+    {
+      process_events();
 
-  if (KeyTyped(KeyCode.SpaceKey))
-  {
-    clr = RandomColor();
-  }
+      if (key_down(RIGHT_KEY))
+      {
+        x += MOVE_SPEED;
+      }
 
-  ClearScreen(ColorWhite());
-  FillCircle(clr, x, 300, 50);
-  RefreshScreen(60);
+      if (key_down(LEFT_KEY))
+      {
+        x -= MOVE_SPEED;
+      }
+
+      if (key_typed(SPACE_KEY))
+      {
+        clr = random_color();
+      }
+
+      clear_screen(COLOR_WHITE);
+      fill_circle(clr, x, 300, 50);
+      refresh_screen(60);
+    }
 }
 ```
 
 The following code shows an example of using the mouse, and its position as part of a program. This uses the distance from the player to the mouse to set the direction of a ball which is thrown when the mouse is clicked.
 
-```cs
-using static SplashKitSDK.SplashKit;
-using SplashKitSDK;
+```c++
+#include "splashkit.h"
 
 const int BALL_RADIUS = 5;
 const int PLAYER_RADIUS = 20;
 
-// Used to calculate distance from player - mouse for
-// Ball speed. speed = distance / DIST_TO_SPEED_RATIO.
-const double DIST_TO_SPEED_RATIO = 30;
-// as above for the line drawn to show direction of shot
-const double DIST_LINE_RATIO = 10;
-
-OpenWindow("Ball Throw", 800, 600);
-
-bool ballFired = false;
-
-double playerX = 400, playerY = 300;
-double ballX = playerX;
-double ballY = playerY;
-double ballXSpeed = 0;
-double ballYSpeed = 0;
-
-while (!QuitRequested())
+int main()
 {
-  ProcessEvents();
+    // Used to calculate distance from player - mouse for
+    // Ball speed. speed = distance / DIST_TO_SPEED_RATIO.
+    const double DIST_TO_SPEED_RATIO = 30;
+    // as above for the line drawn to show direction of shot
+    const double DIST_LINE_RATIO = 10;
 
-  if (MouseClicked(MouseButton.LeftButton) && !ballFired)
-  {
-    ballFired = true;
+    open_window("Ball Throw", 800, 600);
 
-    // calculate velocity for the BALL
-    ballXSpeed = (MouseX() - playerX) / DIST_TO_SPEED_RATIO;
-    ballYSpeed = (MouseY() - playerY) / DIST_TO_SPEED_RATIO;
-  }
+    bool ball_fired = false;
 
-  if (ballFired)
-  {
-    // Move the projective by its x and y speed
-    ballX += ballXSpeed;
-    ballY += ballYSpeed;
+    double player_x = 400, player_y = 300;
+    double ball_x = player_x;
+    double ball_y = player_y;
+    double ball_x_speed = 0;
+    double ball_y_speed = 0;
 
-    // check if off screen
-    if (ballX + BALL_RADIUS < 0 || // off left
-        ballX - BALL_RADIUS > ScreenWidth() || // off right
-        ballY + BALL_RADIUS < 0 || // off top
-        ballY - BALL_RADIUS > ScreenHeight()
-        ) // off bottom
+    while (!quit_requested())
     {
-      ballFired = false;
-      ballX = playerX;
-      ballY = playerY;
+      process_events();
+
+      if (mouse_clicked(LEFT_BUTTON) && !ball_fired)
+      {
+        ball_fired = true;
+
+        // calculate velocity for the BALL
+        ball_x_speed = (mouse_x() - player_x) / DIST_TO_SPEED_RATIO;
+        ball_y_speed = (mouse_y() - player_y) / DIST_TO_SPEED_RATIO;
+      }
+
+      if (ball_fired)
+      {
+        // Move the projective by its x and y speed
+        ball_x += ball_x_speed;
+        ball_y += ball_y_speed;
+
+        // check if off screen
+        if (ball_x + BALL_RADIUS < 0 || // off left
+            ball_x - BALL_RADIUS > screen_width() || // off right
+            ball_y + BALL_RADIUS < 0 || // off top
+            ball_y - BALL_RADIUS > screen_height()
+            ) // off bottom
+        {
+          ball_fired = false;
+          ball_x = player_x;
+          ball_y = player_y;
+        }
+      }
+
+      clear_screen(COLOR_WHITE);
+      fill_circle(COLOR_LIGHT_GREEN, player_x, player_y, PLAYER_RADIUS);
+      fill_circle(COLOR_BLACK, ball_x, ball_y, BALL_RADIUS);
+
+      if ( ! ball_fired )
+      {
+        // Show direction of travel
+        draw_line(COLOR_BLACK,
+          player_x, player_y,
+          player_x + (mouse_x() - player_x) / DIST_LINE_RATIO,
+          player_y + (mouse_y() - player_y) / DIST_LINE_RATIO
+        );
+      }
+
+      refresh_screen(60);
     }
-  }
-
-  ClearScreen(ColorWhite());
-  FillCircle(ColorLightGreen(), playerX, playerY, PLAYER_RADIUS);
-  FillCircle(ColorBlack(), ballX, ballY, BALL_RADIUS);
-
-  if ( ! ballFired )
-  {
-    // Show direction of travel
-    DrawLine(ColorBlack(), 
-      playerX, playerY, 
-      playerX + (MouseX() - playerX) / DIST_LINE_RATIO,
-      playerY + (MouseY() - playerY) / DIST_LINE_RATIO
-    );
-  }
-
-  RefreshScreen(60);
 }
 ```
